html changes; 4 category model changes

--- a/Notebooks/calculate_sample_weights.ipynb
+++ b/Notebooks/calculate_sample_weights.ipynb
@@ -12,19 +12,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/amyclaman/Blindness-Detection-App/Notebooks'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read diagnosis from csv files and cread a list\n",
-    "train_df = pd.read_csv('train.csv')\n",
+    "train_df = pd.read_csv('data/train_4category.csv')\n",
     "class_list = train_df['diagnosis']\n",
     "class_list = class_list.values"
    ]
@@ -38,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 0.4057617728531856,\n",
-       " 1: 1.9794594594594594,\n",
-       " 2: 0.7331331331331331,\n",
-       " 3: 3.7948186528497407,\n",
-       " 4: 2.4827118644067796}"
+       "{0: 0.507202216066482,\n",
+       " 1: 2.4743243243243245,\n",
+       " 2: 0.9164164164164165,\n",
+       " 3: 1.8760245901639345}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
