cleanup; add masking to image.html

--- a/Notebooks/create_image_pics.ipynb
+++ b/Notebooks/create_image_pics.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Small sections of image processing to create images for the html\n",
+    "## Important....many image files are not stored in the repository and must be on a local drive to run this notebook. File paths will likely need to change!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
