removed excess notebooks; added nb for creating csv files for new images

--- a/Notebooks/create_csv_new.ipynb
+++ b/Notebooks/create_csv_new.ipynb
@@ -1,12 +1,149 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook goes through the image label files, sorts out the images desired for training the model and creates new csv files needed in creating the pickle.\n",
+    "## Please note that images and paths to images are not in the repository and this notebook won't run as is without some data and path manipulation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Orig Kaggle images (png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_code</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000c1434d8d7</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>001639a390f0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0024cdab0c1e</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>002c21358ce6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>005b95c28852</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id_code  diagnosis\n",
+       "0  000c1434d8d7          2\n",
+       "1  001639a390f0          4\n",
+       "2  0024cdab0c1e          1\n",
+       "3  002c21358ce6          0\n",
+       "4  005b95c28852          0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../Blindness-Detection-App/Notebooks/data/train.csv\"\n",
+    "df_png = pd.read_csv(path)\n",
+    "df_png.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id_code      295\n",
+      "diagnosis    295\n",
+      "dtype: int64\n",
+      "id_code      193\n",
+      "diagnosis    193\n",
+      "dtype: int64\n",
+      "id_code      999\n",
+      "diagnosis    999\n",
+      "dtype: int64\n",
+      "id_code      370\n",
+      "diagnosis    370\n",
+      "dtype: int64\n",
+      "id_code      1805\n",
+      "diagnosis    1805\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_png.loc[df_png['diagnosis'] == 4].count())\n",
+    "print(df_png.loc[df_png['diagnosis'] == 3].count())\n",
+    "print(df_png.loc[df_png['diagnosis'] == 2].count())\n",
+    "print(df_png.loc[df_png['diagnosis'] == 1].count())\n",
+    "print(df_png.loc[df_png['diagnosis'] == 0].count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old Kaggle images (jpeg)"
    ]
   },
   {
@@ -85,169 +222,87 @@
    ],
    "source": [
     "path = 'trainLabels.csv'\n",
-    "df = pd.read_csv(path)\n",
-    "df.head()"
+    "df_jpeg = pd.read_csv(path)\n",
+    "df_jpeg.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "image    708\n",
-       "level    708\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.loc[df['level'] == 4].count()"
+    "df_jpeg_4 = df_jpeg.loc[df_jpeg['level'] == 4]\n",
+    "df_jpeg_3 = df_jpeg.loc[df_jpeg['level'] == 3]\n",
+    "df_jpeg_2_all = df_jpeg.loc[df_jpeg['level'] == 2]\n",
+    "df_jpeg_2_right = df_jpeg_2_all[df_jpeg_2_all['image'].str.contains(\"_right\")]\n",
+    "df_jpeg_2 = df_jpeg_2_right.sample(300)\n",
+    "df_jpeg_1_all = df_jpeg.loc[df_jpeg['level'] == 1]\n",
+    "df_jpeg_1 = df_jpeg_1_all[df_jpeg_1_all['image'].str.contains(\"_right\")]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image    708\n",
+      "level    708\n",
+      "dtype: int64\n",
+      "image    873\n",
+      "level    873\n",
+      "dtype: int64\n",
+      "image    300\n",
+      "level    300\n",
+      "dtype: int64\n",
+      "image    1231\n",
+      "level    1231\n",
+      "dtype: int64\n",
+      "image    5292\n",
+      "level    5292\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "df_4 = df.loc[df['level'] == 4]"
+    "print(df_jpeg_4.count())\n",
+    "print(df_jpeg_3.count())\n",
+    "print(df_jpeg_2.count())\n",
+    "print(df_jpeg_1.count())\n",
+    "print(df_jpeg.loc[df_jpeg['level'] == 2].count())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "image    873\n",
-       "level    873\n",
+       "image    3112\n",
+       "level    3112\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['level'] == 3].count()"
+    "frames = [df_jpeg_1, df_jpeg_2, df_jpeg_3, df_jpeg_4]\n",
+    "jpeg_images_df = pd.concat(frames)\n",
+    "jpeg_images_df.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_3 = df.loc[df['level'] == 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "image    2443\n",
-       "level    2443\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['level'] == 1].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1 = df.loc[df['level'] == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "image    1231\n",
-       "level    1231\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_temp = df_1[df_1['image'].str.contains(\"_right\")]\n",
-    "df_temp.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = [df_temp, df_3, df_4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "additional_images_df = pd.concat(frames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id_code      2812\n",
-       "diagnosis    2812\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "additional_images_df.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -314,37 +369,205 @@
        "211  240_right          1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "additional_images_df.rename(columns={\"image\": \"id_code\", \"level\": \"diagnosis\"}, inplace=True)\n",
-    "additional_images_df.head()"
+    "jpeg_images_df.rename(columns={\"image\": \"id_code\", \"level\": \"diagnosis\"}, inplace=True)\n",
+    "jpeg_images_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "additional_images_df.to_csv ('train_extra.csv', index = None, header=True)"
+    "jpeg_images_df.to_csv ('train_jpeg.csv', index = None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# move jpeg images to a keep folder so as to only process thru these"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
-    "for i, row in additional_images_df.iterrows():  # iterate over each id\n",
+    "for i, row in jpeg_images_df.iterrows():  # iterate over each id\n",
     "    image_id = row['id_code']\n",
     "    shutil.move(f'train/{image_id}.jpeg', f'train/keep/{image_id}.jpeg')\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IDR images (jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_code</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IDRiD_001</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IDRiD_002</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>IDRiD_003</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IDRiD_004</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IDRiD_005</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id_code  diagnosis\n",
+       "0  IDRiD_001          3\n",
+       "1  IDRiD_002          3\n",
+       "2  IDRiD_003          2\n",
+       "3  IDRiD_004          3\n",
+       "4  IDRiD_005          4"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = \"../Blindness-Detection-App/Notebooks/data/IDRiD_5cat.csv\"\n",
+    "df_jpg = pd.read_csv(path)\n",
+    "df_jpg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_jpg_4 = df_jpg.loc[df_jpg['diagnosis'] == 4]\n",
+    "df_jpg_3 = df_jpg.loc[df_jpg['diagnosis'] == 3]\n",
+    "# df_jpg_2 = df_jpg.loc[df_jpg['diagnosis'] == 2]\n",
+    "df_jpg_1 = df_jpg.loc[df_jpg['diagnosis'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_code      143\n",
+       "diagnosis    143\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# frames_jpg = [df_jpg_1, df_jpg_2, df_jpg_3, df_jpg_4]\n",
+    "frames_jpg = [df_jpg_1, df_jpg_3, df_jpg_4]\n",
+    "jpg_images_df = pd.concat(frames_jpg)\n",
+    "jpg_images_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id_code      49\n",
+      "diagnosis    49\n",
+      "dtype: int64\n",
+      "id_code      74\n",
+      "diagnosis    74\n",
+      "dtype: int64\n",
+      "id_code      20\n",
+      "diagnosis    20\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_jpg_4.count())\n",
+    "print(df_jpg_3.count())\n",
+    "# print(df_jpg_2.count())\n",
+    "print(df_jpg_1.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jpg_images_df.to_csv ('train_jpg.csv', index = None, header=True)"
    ]
   },
   {
